# pyro-dataset

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  AnnotationProcessor.ipynb  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  setup.py  yolo.yaml
.dvc/: config
.github/: validate_headers.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: builds.yml  ci.yml  release.yml
Data/: .gitignore  Models.dvc
Data/Archive/: .gitignore  Ai_for_mankind.zip.dvc  Ardeche.zip.dvc  Random.zip.dvc  Wildfire.zip.dvc
data/interim/: .gitignore  false_positives.dvc
data/processed/: .gitignore  README.md
data/raw/: .gitignore  DS_fp.dvc  FP_2024.dvc  (+12 more)
notebooks/: 1.0-arthur-bokeh-playground.ipynb  1.1-arthur-bokeh-load-report.ipynb
pipeline/: auto_label.py  create_dataset.py  split_dataset.py  train.py  unzip.py
pyrodataset/: __init__.py  check_annotations.py  parse_annotations.py  splitter_utils.py  version.py  video_splitter.py
scripts/: add_data.py  analyze_processed_dataset.py  apply_azimuth_remap.py  azimuth_correction_validator.py  build_fp_yolo_dataset.py  build_manifest.py  build_sequential_dataset.py  build_toy_dataset.py  build_wf_yolo_dataset.py  collect_env.py  constants.py  crop_with_prediction.py  embed_fp_for_selection.py  fetch_platform_sequence_id.py  fetch_platform_sequences.py  filter_data_false_positives.py  filter_data_figlib_smoke.py  filter_data_pyronear_ds_smoke.py  filter_data_pyrosdis_smoke.py  install_huggingface_dataset.py  install_local_huggingface_dataset.py  make_temporal_test_dataset.py  make_temporal_train_val_dataset.py  make_test_dataset.py  make_train_val_dataset.py  match_cameras_by_keypoints.py  merge_smoke_datasets.py  merge_yolo_dataset.py  move_fp_to_wildfire.py  move_wf_to_fp.py  predict.py  release.py  resolve_azimuth_clusters.py  run.py  sequence_viewer.py  split_false_positives.py  split_figlib.py  temp_rename_predictions_to_detection.py  truncate_sequences.py  visualize_dataset.py
test/: requirements.txt  test_3_videos.json  test_3_videos_only_exploitable.json  test_check_annotations.py  test_datasets.py  test_datasets_utils.py  test_datasets_video_utils.py  test_only_non_exploitable.json  test_parse_annotations.py  test_splitter_utils.py  test_video_splitter.py
tests/: __init__.py  conftest.py  test_data_leakage.py  test_ingest.py  test_parsers.py  test_validation.py
(+43 files in other folders)
