[project]
name = "pyro-dataset"
version = "0.1.0"
description = "Pyronear Dataset contains the code and libraries to generate and curate the wildfire dataset used for training the ML models."
readme = "README.md"
authors = [
    { name = "Arthur Caillau", email = "arthur@caillau.me" }
]
requires-python = ">=3.10"
dependencies = [
    "dvc>=3.59.1",
    "fiftyone>=1.4.1",
    "jupyterlab>=4.4.0",
    "ultralytics>=8.3.107",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
