[project]
name = "pyro-dataset"
version = "0.1.0"
description = "Pyronear Dataset contains the code and libraries to generate and curate the wildfire dataset used for training the ML models."
readme = "README.md"
authors = [
    { name = "Arthur Caillau", email = "arthur@caillau.me" }
]
requires-python = ">=3.10"
dependencies = [
    "bokeh>=3.7.2",
    "clip",
    "datasets>=3.5.0",
    "dvc>=3.59.1",
    "dvc-s3>=3.2.0",
    "jupyter-bokeh>=4.0.5",
    "open-clip-torch>=2.32.0",
    "supervision>=0.25.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "ultralytics>=8.3.107",
    "umap-learn>=0.5.7",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "fiftyone==1.3.2",
    "jupyterlab>=4.4.0",
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
