[project]
name = "pyro-dataset"
version = "0.1.0"
description = "Pyronear Dataset contains the code and libraries to generate and curate the wildfire dataset used for training the ML models."
readme = "README.md"
authors = [{ name = "Pyronear", email = "contact@pyronear.org" }]
requires-python = ">=3.10"
dependencies = [
    "bokeh>=3.7.2",
    "datasets>=3.5.0",
    "dvc>=3.59.1",
    "dvc-s3>=3.2.0",
    "jupyter-bokeh>=4.0.5",
    "scikit-learn>=1.6.0",
    "supervision>=0.25.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.46.0,<5",
    "ultralytics>=8.3.107",

]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "fiftyone==1.3.2",
    "streamlit>=1.40.0",
    "isort>=6.0.1",
    "jupyterlab>=4.4.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.12.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
